--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-slick": "^0.29.0",
     "tailwind-hamburgers": "^1.2.2",
     "tailwind-merge": "^1.5.1"
   },
