--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-hamburgers": "^1.2.2",
     "tailwind-merge": "^1.5.1"
   },
