--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-icons": "^4.4.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swr": "^1.3.0",
     "tailwind-hamburgers": "^1.2.2",
-    "tailwind-merge": "^1.5.1"
+    "tailwind-merge": "^1.5.1",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
