--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swr": "^1.3.0",
