feat: 🎸 making login & logout

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # !STARTERCONF Change to true if you want to log data
 NEXT_PUBLIC_SHOW_LOGGER="false"
 
-DATABASE_URL="http://localhost:3000"
+API_SERVER_URL="http://localhost:3000"
