--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swr": "^1.3.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@types/node": "^18.7.15",
     "@types/react": "^18.0.17",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.21.0",
