--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "framer-motion": "^7.2.0",
+    "moment": "^2.29.4",
     "next": "^12.2.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
