feat: 🎸 animation something

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^7.2.0",
     "moment": "^2.29.4",
     "next": "^12.2.5",
+    "nextjs-progressbar": "^0.0.14",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
