--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-slick": "^0.29.0",
